--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lovelyarts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chamara-madhu.github.io/cars",
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -12,12 +13,16 @@
     "react": "^16.13.1",
     "react-country-flag": "^2.2.0",
     "react-dom": "^16.13.1",
+    "react-images": "^1.1.7",
     "react-input-range": "^1.3.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
